--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <title>LMAO</title>
 </head>
 <body>
+
     <div class="section header">
+
         <div class="menu">
             <h2 class="menu-logo">Logo</h2>
             <a href="">header link one</a>
             <a href="">header link two</a>
             <a href="">header link three</a>
         </div>
+
         <div class="content">
             <div class="content-1">
                 <div>
@@ -27,9 +30,72 @@
                     <button>Sign up</button>
                 </div>
             </div>
+
             <div class="content-2">
                 <p>placeholder for image</p>
             </div>
+
+        </div>
+    </div>
+
+    <div class="section info"> 
+
+        <div class="info-title">
+            <h1>Some random information</h1>
+        </div>
+
+        <div class="info-images">
+
+            <div class="images">
+                <div class="box"></div>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+
+            <div class="images">
+                <div class="box"></div>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+
+            <div class="images">
+                <div class="box"></div>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+
+            <div class="images">
+                <div class="box"></div>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+
+        </div>
+
+    </div>
+
+    <div class="section quote">
+        <div class="quotes">
+            <div>
+                <em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium dolores facere, doloremque magnam molestias accusamus quasi ut rem perspiciatis! Doloremque neque enim corrupti sunt dolore facere quam necessitatibus minus.</em>
+            </div>
+            <div class="right">
+                <p>-Thor, God of Thunder</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="section sign-up">
+        <div class="sign-ups">
+            <div class="texts">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div>
+                <button>Sign up</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="section footer">
+        <div class="footers">
+            <p>Copyright &copy; Ur mom awkaowkow 2021</p>
         </div>
     </div>
     
