update for dcd submission

--- a/index.html
+++ b/index.html
@@ -5,99 +5,115 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
-    <title>LMAO</title>
+    <title>@raihanadf</title>
 </head>
 <body>
 
-    <div class="section header">
+    <header class="section header">
 
-        <div class="menu">
-            <h2 class="menu-logo">Logo</h2>
-            <a href="">header link one</a>
-            <a href="">header link two</a>
-            <a href="">header link three</a>
-        </div>
+        <nav class="menu">
+            <h2 class="menu-logo">Cattos</h2>
+            <a href="#favcats">/cats</a>
+            <a href="#biodata">/biodata</a>
+            <a href="#contact">/contact</a>
+        </nav>
 
         <div class="content">
-            <div class="content-1">
+            <aside class="content-1">
                 <div>
-                    <h1>This website is awesome</h1>
+                    <h1>Cats are awesome</h1>
                 </div>
                 <div>
-                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                    <p>Tapi munafik ku menunggu tak tentu, bila tak kunjung datang kepastian tentang waktu. Jangan datang lagi cinta bagaimana aku bisa lupa, pillowtalk my enemies my ally prisoners then blabla i see the pain see the pleasure :(</p>
                 </div>
                 <div>
-                    <button>Sign up</button>
+                    <button>Contact</button>
                 </div>
-            </div>
+            </aside>
 
             <div class="content-2">
-                <p>placeholder for image</p>
             </div>
 
         </div>
-    </div>
+    </header>
 
-    <div class="section info"> 
+    <main>
 
-        <div class="info-title">
-            <h1>Some random information</h1>
+    <article class="section info"> 
+
+        <div class="info-title" id="favcats">
+            <h1>My fav cattos</h1>
         </div>
 
         <div class="info-images">
 
             <div class="images">
-                <div class="box"></div>
-                <p>This is some subtext under an illustration or image</p>
+                <img class="box" src="https://pbs.twimg.com/media/FeCbAhjXwAIV5-g?format=jpg&name=small" alt="Sulaiman"></img>
+                <p>Ini Sulaimain, dia suka tidur sampe dua hari</p>
             </div>
 
             <div class="images">
-                <div class="box"></div>
-                <p>This is some subtext under an illustration or image</p>
+                <img class="box" src="https://pbs.twimg.com/media/FeFeauTX0Ak1PqH?format=jpg&name=small" alt="Samsulism"></img>
+                <p>Ini Samsul, dia gak suka kerja di korporat jadi dia sering marah-marah gajelas</p>
             </div>
 
             <div class="images">
-                <div class="box"></div>
-                <p>This is some subtext under an illustration or image</p>
+                <img class="box" src="https://pbs.twimg.com/media/Fd8Ll8hVIAE1Crx?format=jpg&name=900x900" alt="Herman"></img>
+                <p>Ini Herman, dia suka teriak emang</p>
             </div>
 
             <div class="images">
-                <div class="box"></div>
-                <p>This is some subtext under an illustration or image</p>
+                <img class="box" src="https://pbs.twimg.com/media/Fdw5-JAVUAEu6DS?format=jpg&name=900x900" alt="Nahiar"></img>
+                <p>Ini Nahiar, dia gak suka kalo difoto</p>
             </div>
 
         </div>
 
-    </div>
+    </article>
 
-    <div class="section quote">
-        <div class="quotes">
-            <div>
-                <em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium dolores facere, doloremque magnam molestias accusamus quasi ut rem perspiciatis! Doloremque neque enim corrupti sunt dolore facere quam necessitatibus minus.</em>
-            </div>
-            <div class="right">
-                <p>-Thor, God of Thunder</p>
-            </div>
+    <article class="biodata" id="biodata">
+      <div class="biodatas">
+        <div class="bio-1">
+          <div>
+            <em>Kadang, kunci dari kesuksesan adalah key of success dan wasting time hanyalah membuang-buang waktu</em>
+          </div>
+          <div class="links">
+            <a href="https://github.com/raihanadf">/github</a>
+            <a href="https://open.spotify.com/user/horizonism">/spotify</a>
+            <a href="https://instagram.com/raihanadf/">/instagram</a>
+          </div>
         </div>
-    </div>
+        <aside class="bio-2">
+          <img src="https://d17ivq9b7rppb3.cloudfront.net/small/avatar/20210510105114f325f56e6b2753f956a2f136c3c4e6cc.png" alt="">
+          <div class="right">
+              <p>Raihan Achmad Dani Firmansyah</p>
+              <p>@raihanadf</p>
+          </div>
+        </aside>
+      </div>
+    </article>
 
-    <div class="section sign-up">
-        <div class="sign-ups">
+    <article class="section contact" id="contact">
+        <div class="contacts">
             <div class="texts">
-                <h3>Call to action! It's time!</h3>
-                <p>Sign up for our product by clicking that button right over there!</p>
+                <h3>Sini Coba! Sini Klik!</h3>
+                <p>COBA KLIK BUTTON YANG DISAMPING INI CEPAATTTT!</p>
             </div>
             <div>
-                <button>Sign up</button>
+              <a href="https://rtmfm.com">
+                <button class="boom">BOOM</button>
+              </a>
             </div>
         </div>
-    </div>
+    </article>
 
-    <div class="section footer">
+  </main>
+
+    <footer class="footer">
         <div class="footers">
-            <p>Copyright &copy; Ur mom awkaowkow 2021</p>
+            <p>Copyright &copy; @raihanadf 2022</p>
         </div>
-    </div>
+    </footer>
     
 </body>
 </html>
