--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
             <p>Copyright &copy; @raihanadf 2022</p>
         </div>
     </footer>
+
+    <ngab>HP apa ukuran segini???</ngab>
     
 </body>
 </html>
